--- a/src/index.css
+++ b/src/index.css
@@ -7,11 +7,11 @@
 }
 
 .btn{
-  @apply inline-flex items-center h-12 px-6 mb-3 font-medium text-white transition duration-200 rounded shadow-md  md:mb-0 bg-blue-400 hover:bg-blue-700
+  @apply inline-flex items-center h-12 px-6 mb-3 font-medium text-white transition duration-200 rounded-lg shadow-md  md:mb-0 bg-blue-500 hover:bg-blue-700
 }
 
 .badge{
-  @apply inline-block px-3 py-px mb-4 text-xs font-semibold tracking-wider text-teal-900 uppercase rounded-full bg-yellow-400
+  @apply inline-block px-3 py-px mb-4 text-2xl font-semibold tracking-wider text-teal-900 uppercase rounded-full bg-blue-400
 }
 
 .active{
