Feature section complete

--- a/src/index.css
+++ b/src/index.css
@@ -3,11 +3,17 @@
 @tailwind utilities;
 
 .my-container{
-  @apply px-4 py-16 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8 lg:py-20
+  @apply px-4 py-16 md:py-6 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8 lg:py-20
 }
 
 .btn{
   @apply inline-flex items-center h-12 px-6 mb-3 font-medium text-white transition duration-200 rounded-lg shadow-md  md:mb-0 bg-blue-500 hover:bg-blue-700
+}
+.btn1{
+  @apply inline-flex items-center h-8  px-6 my-3 mx-2 font-medium text-blue-500 transition duration-200 rounded-lg shadow-md  md:mb-0 bg-slate-200 hover:bg-slate-50 hover:text-blue-800
+}
+.btn2{
+  @apply bg-blue-600 hover:bg-blue-800 text-white py-3 rounded-md px-2 font-bold w-28 text-center mx-auto block
 }
 
 .badge{
